--- a/src/AllegianceOverhaul/AllegianceOverhaul.csproj
+++ b/src/AllegianceOverhaul/AllegianceOverhaul.csproj
@@ -13,14 +13,16 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Bannerlord.BuildResources" Version="$(BuildResourcesVersion)">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Bannerlord.BUTR.Shared" Version="$(BUTRSharedVersion)">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+    <PackageReference Include="Bannerlord.BuildResources" Version="$(BuildResourcesVersion)">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Bannerlord.BUTR.Shared" Version="$(BUTRSharedVersion)">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Bannerlord.ModuleLoader" Version="$(BUTRModuleLoaderVersion)" />
+    <PackageReference Include="Bannerlord.ModuleManager.Source" Version="$(BUTRModuleManagerVersion)" />
 		<PackageReference Include="Nullable" Version="1.3.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -49,8 +51,5 @@
 
 	<ItemGroup>
 		<Folder Include="_Module\ModuleData\" />
-	</ItemGroup>
-	<ItemGroup>
-		<ProjectReference Include="..\AllegianceOverhaul.ImplementationLoader\AllegianceOverhaul.ImplementationLoader.csproj" />
 	</ItemGroup>
 </Project>
