Added missing substitution variables for SubModule.xml

--- a/src/AllegianceOverhaul/AllegianceOverhaul.csproj
+++ b/src/AllegianceOverhaul/AllegianceOverhaul.csproj
@@ -52,4 +52,16 @@
 	<ItemGroup>
 		<Folder Include="_Module\ModuleData\" />
 	</ItemGroup>
+
+	<!-- Extra Substitution Variables to Use in SubModule.xml -->
+	<ItemGroup>
+		<SubModuleOverrides Include="DisplayName">
+			<Regex>\$displayname\$</Regex>
+			<Replacement>$(DisplayName)</Replacement>
+		</SubModuleOverrides>
+		<SubModuleOverrides Include="MCMVersion">
+			<Regex>\$mcmversion\$</Regex>
+			<Replacement>$(MCMVersion)</Replacement>
+		</SubModuleOverrides>
+	</ItemGroup>
 </Project>
