--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Publish Module
 
 on:
   push:
@@ -14,10 +14,12 @@ env:
   DOTNET_CLI_TELEMETRY_OPTOUT: true
 
 jobs:
-
-  build:
-    name: Build for NexusMods
+  build-module:
+    name: Build Module
     runs-on: ubuntu-latest
+    outputs:
+      mod_version: ${{ steps.changelog.outputs.mod_version }}
+      mod_description: ${{ steps.changelog.outputs.mod_description }}    
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v3
@@ -25,7 +27,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@master
       with:
-        dotnet-version: 5.0.x
+        dotnet-version: 6.0.x
 
     - name: Build Allegiance Overhaul
       run: |
@@ -60,45 +62,10 @@ jobs:
         Remove-Item -Recurse $impl;
       shell: pwsh
 
-    - name: Upload bannerlord folder
-      uses: actions/upload-artifact@v3
-      with:
-        name: AllegianceOverhaul
-        path: ./bannerlord/Modules/
-        
-###########################
-#         GITHUB          #
-###########################
-  publish-on-github:
-    name: Publish on GitHub
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - name: Setup
-      uses: butr/actions-common-setup@v2.0
-      with:
-        github-token: ${{secrets.GITHUB_TOKEN}}
-
-    - name: Download stable bannerlord folder
-      uses: actions/download-artifact@v3
-      with:
-        name: AllegianceOverhaul
-        path: ./bannerlord/Modules/
-
-    - name: Zip AllegianceOverhaul
-      run: 7z a -t7z AllegianceOverhaul.7z ./bannerlord/* -mx9
-      #shell: pwsh
-      # pwsh casues it to include the root folder
-
-    - name: Install Bannerlord.ChangelogParser and Bannerlord.NexusmodsUploader
-      run: >-
-        dotnet tool install -g Bannerlord.ChangelogParser;
-        dotnet tool install -g Bannerlord.NexusmodsUploader;
-      shell: pwsh
-
-    - name: Run ChangelogParser
+    - name: Install and Run ChangelogParser
       id: changelog
       run: |
+        dotnet tool install -g Bannerlord.ChangelogParser
         vers="$(bannerlord_changelog_parser latestversion -f "$PWD/changelog.txt")"
         echo "::set-output name=mod_version::$vers"
         desc="$(bannerlord_changelog_parser fulldescription -f "$PWD/changelog.txt")"
@@ -106,27 +73,54 @@ jobs:
         desc="${desc//$'\n'/'%0A'}"
         desc="${desc//$'\r'/'%0D'}"
         echo "::set-output name=mod_description::$desc"
-      shell: bash
 
-    - name: Create Release
-      uses: actions/create-release@v1
-      id: create_release
+    - name: Upload bannerlord folder
+      uses: actions/upload-artifact@v3
       with:
-        tag_name: v${{steps.changelog.outputs.mod_version}}
-        release_name: Release ${{steps.changelog.outputs.mod_version}}
-        body: ${{steps.changelog.outputs.mod_description}}
-        draft: false
-        prerelease: false
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        name: AllegianceOverhaul
+        path: ./bannerlord/Modules/
 
-    - name: Upload Release Asset
-      id: upload-release-asset
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{steps.create_release.outputs.upload_url}}
-        asset_path: ./AllegianceOverhaul.7z
-        asset_name: AllegianceOverhaul.7z
-        asset_content_type: application/x-7z-compressed
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}        
+###########################
+#        NEXUSMODS        #
+###########################
+  publish-on-nexusmods:
+    needs: ["build-module"]
+    uses: BUTR/workflows/.github/workflows/release-nexusmods.yml@master
+    with:
+      nexusmods_game_id: mountandblade2bannerlord
+      nexusmods_mod_id: 1750
+      mod_filename: Allegiance Overhaul
+      mod_version: ${{ needs.build-module.outputs.mod_version }}
+      mod_description: ${{ needs.build-module.outputs.mod_description }}
+      artifact_name: AllegianceOverhaul
+    secrets:
+      NEXUSMODS_APIKEY: ${{ secrets.NEXUSMODS_APIKEY }}
+      NEXUSMODS_COOKIES: ${{ secrets.NEXUSMODS_COOKIES }}
+
+###########################
+#          STEAM          #
+###########################
+  publish-on-steam:
+    needs: ["build-module"]
+    uses: BUTR/workflows/.github/workflows/release-steam.yml@master
+    with:
+      workshop_id: 2886206108
+      mod_id: Allegiance Overhaul
+      mod_description: ${{ needs.build-module.outputs.mod_description }}
+      artifact_name: AllegianceOverhaul
+    secrets:
+      STEAM_LOGIN: ${{ secrets.STEAM_WORKSHOP_LOGIN }}
+      STEAM_PASSWORD: ${{ secrets.STEAM_WORKSHOP_PASSWORD }}
+      STEAM_AUTH_CODE: ${{ secrets.STEAM_WORKSHOP_AUTH_CODE }}
+
+###########################
+#         GITHUB          #
+###########################
+  publish-on-github:
+    needs: ["build-module"]
+    uses: BUTR/workflows/.github/workflows/release-github.yml@master
+    with:
+      mod_id: AllegianceOverhaul
+      mod_version: ${{ needs.build-module.outputs.mod_version }}
+      mod_description: ${{ needs.build-module.outputs.mod_description }}
+      artifact_name: AllegianceOverhaul
