--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -78,7 +78,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: AllegianceOverhaul
-        path: ./bannerlord/Modules/
+        path: ./bannerlord/
 
 ###########################
 #        NEXUSMODS        #
