--- a/.github/workflows/TestDescTrimming.yml
+++ b/.github/workflows/TestDescTrimming.yml
@@ -33,4 +33,6 @@ jobs:
         desc="${desc//'%'/'%25'}"
         desc="${desc//$'\n'/'%0A'}"
         desc="${desc//$'\r'/'%0D'}"
+        desc="${desc//'%'/'%25'}"
+        $ echo "${desc#*%0A}"
         echo "$desc"
