--- a/.github/workflows/TestDescTrimming.yml
+++ b/.github/workflows/TestDescTrimming.yml
@@ -35,5 +35,5 @@ jobs:
         desc="${desc//$'\r'/'%0D'}"
         desc="${desc//'%'/'%25'}"
         echo "$desc"
-        $ echo "${desc#*'%0A'}"
+        desc="${desc#'%0A'}"
         echo "$desc"
